# console-component-generator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  lint.yml
src/: main.cpp
src/commands/: make_command.cpp  make_command.h
